--- a/src/layout/layout.html
+++ b/src/layout/layout.html
@@ -23,7 +23,7 @@
           <a class="nav-link" href="#">Sessions</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Présentateurs</a>
+          <a class="nav-link" href="#speakers-list">Présentateurs</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">A propos du téléphone</a>
@@ -31,20 +31,4 @@
       </ul>
     </div>
   </nav>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-6 col-md-9">
-      <img src="http://placehold.it/200x200" style="margin-left:50%;margin-top:10%" class="img-responsive">
-    </div>
-    <H1 style="margin-left:24%;margin-top:5%;">Conférence</H1>
-    <p style="margin-left:30%;">
-      Date début - Date Fin
-      <br><br>
-      <a href="#" class="btn btn-secondary">Voir les sessions</a>
-      <br><br>
-      <a href="#" class="btn btn-secondary">Voir les présentateurs</a>
-    </p>
-  </div>
 </div>
